--- a/cityFood.html
+++ b/cityFood.html
@@ -7,7 +7,7 @@
     <title class="pageTitle">Delivery Restaurants in </title>
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/icons/zomato_favicon.jpg">
     <link rel="stylesheet" href="cityFood.css">
-    <script defer src="cityFood.js"></script>
+    <script  type="module" defer src="cityFood.js"></script>
     <script type="module" src="restaurantMenuData.js"></script>
 </head>
 
@@ -432,7 +432,7 @@
                     </div>
                 </div>
             </div> -->
-
+<!-- --- -->
         </div>
     </section>
 
