lastest working code as of 21/11/2024

--- a/cityFood.html
+++ b/cityFood.html
@@ -402,7 +402,7 @@
     <!-- hero section -->
     <section class="deliveryRestaurants">
         <p class="deliveryRestaurants-Header">
-            Delivery Restaurants in <b class="deliveryRestaurants-Header-city-name" style="font-weight: 600;">Agra</b>
+            Delivery Restaurants in <b class="deliveryRestaurants-Header-city-name" style="font-weight: 600;">Kolkata</b>
         </p>
         <div class="deliveryRestaurants-container">
             <!-- 
